--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>Happy Valentines :)</title>
     <link
       rel="stylesheet"
     />
@@ -14,27 +14,19 @@
 
   <body>
     <div class="container">
-      <div class="one">
-        <h1 class="one">
-          Hey
-          <span id="name">xyz</span>
-        </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
-      </div>
+      
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's Valentine's! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day!
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
           I realised, I wanted to do something <strong>special</strong>.
         </p>
