--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h5 id="wishText"> Roses are red, violets are blue, in case you haven't noticed, here are flowers 4 u! </h5>
+          <h5> from feli :D </h5>
         </div>
       </div>
       <div class="seven">
