--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentines :)</title>
+    <title>Happy Valentine's :)</title>
     <link
       rel="stylesheet"
     />
@@ -14,7 +14,13 @@
 
   <body>
     <div class="container">
-      
+      <div class="one">
+        <h1 class="one">
+          Hey
+          <span id="name">Stranger!</span>
+        </h1>
+        <p class="two" id="greetingText">what's cookin good looking? </p>
+      </div>
       <div class="three">
         <p>It's Valentine's! :D</p>
       </div>
@@ -27,8 +33,10 @@
         </div>
       </div>
       <div class="five">
+        <p class="idea-1">A simple message could mean a lot, </p>
+        <p class="idea-2">But you deserve more ;) </p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          Here's something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
@@ -44,7 +52,7 @@
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText"> Roses are red, violets are blue, in case you haven't noticed, here are flowers 4 u! </h5>
+          <h5 id="wishText">Roses are red, violets are blue, in case you haven't noticed, here are flowers 4 u!</h5>
           <h5> from feli :D </h5>
         </div>
       </div>
